--- a/css/components/hero-blob.css
+++ b/css/components/hero-blob.css
@@ -18,7 +18,6 @@
 
     animation: blobMoves 8s linear infinite;
 }
-
 @keyframes blobMoves {
     0%, 100% {
         border-radius: 55% 60% 60% 40% / 50% 55% 50% 50%;
@@ -31,5 +30,11 @@
     }
     25% {
         border-radius: 45% 60% 50% 45% / 65% 60% 50% 45%;;
+    }
+}
+@media (max-width: 991px) {
+    .heroBlob {
+        height: 100%;
+        width: 100%;
     }
 }
